--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                   <img src="assets/images/microsoft_fh.png" alt="microsoft_fh" />
                 </div>
                 <div class="ud-single-logo">
-                  <img src="assets/images/aws_activate" alt="aws_activate" />
+                  <img src="assets/images/aws_activate.png" alt="aws_activate" />
                 </div>
               </div>
             </div>
@@ -613,6 +613,7 @@
               </ul>
             </div>
           </div>
+          <div class="row">
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".15s">
               <div class="ud-team-image-wrapper">
@@ -632,6 +633,7 @@
               </ul>
             </div>
           </div>
+          <div class="row">
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-team-image-wrapper">
@@ -652,6 +654,7 @@
               </ul>
             </div>
           </div>
+          <div class="row">
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".25s">
               <div class="ud-team-image-wrapper">
