--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/images/favicon"
       type="image/svg"
     />
 
