--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon"
+      href="assets/images/favicon.png"
       type="image/svg"
     />
 
@@ -38,22 +38,7 @@
     <link rel="stylesheet" href="assets/css/ud-styles.css" />
   </head>
   <body>
-    <!-- ====== Header Start ====== -->
-    <header class="ud-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo.png" alt="Logo" />
-              </a>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- ====== Header End ====== -->
-
+  
     <!-- ====== Hero Start ====== -->
     <section class="ud-hero" id="home">
       <div class="container">
