--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
     <link rel="stylesheet" href="assets/css/ud-styles.css" />
   </head>
   <body>
+    <!-- Logo Section -->
+    <section class="ud-logo" id="logo">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <img src="assets/images/hero/logo.png" alt="Your Logo" class="ud-logo-image">
+          </div>
+        </div>
+      </div>
+    </section>
   
     <!-- ====== Hero Start ====== -->
     <section class="ud-hero" id="home">
