--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                App centered around doctors
+                CareApp is centered around doctors
               </h1>
               <p class="ud-hero-desc">
                 Multidisciplinary App for doctors to manage patients
