--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://links.uideck.com/play-bootstrap-download" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-white-btn">
-                    Join us
-                  </a>
-                </li>
-                <li>
                   <a href="https://github.com/uideck/play-bootstrap" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
                     Learn More <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
+              </ul>
+              <li>
+                  <a href="https://github.com/uideck/play-bootstrap" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
+                    Join us <i class="lni lni-arrow-right"></i>
+                  </a>
+                </li>
+              <ul>
+                
               </ul>
             </div>
             <div
