--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </ul>
               <li>
                   <a href="https://github.com/uideck/play-bootstrap" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
-                    Join us <i class="lni lni-arrow-right"></i>
+                    Join us <i></i>
                   </a>
                 </li>
               <ul>
