--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 best protect highly vulnerable business applications with
                 interactive panel.
               </p>
-              <a href="javascript:void(0)" class="ud-main-btn">Learn More</a>
+              <a href="https://sites.google.com/view/carevoiceai-frontend-developer/home" class="ud-main-btn">Join us</a>
             </div>
           </div>
           <div class="ud-about-image">
