--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               class="ud-hero-brands-wrapper wow fadeInUp"
               data-wow-delay=".3s"
             >
-              <img src="assets/images/hero/brand.svg" alt="brand" />
+              <img src="assets/images/hero/brand.png" alt="brand" />
             </div>
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
               <img src="assets/images/hero/hero-image.png" alt="hero-image" />
